syntax = "proto3";
package proto;

option go_package = "plugin/eventsearcher/proto";

message FsEventsFilter {
    int64 start_timestamp = 1;
    int64 end_timestamp = 2;
    repeated string actions = 3;
    string username = 4;
    string ip = 5;
    string ssh_cmd = 6;
    repeated string protocols = 7;
    repeated int32 statuses = 8;
    repeated string instance_ids = 9;
    int32 limit = 10;
    string from_id = 11;
    int32 fs_provider = 12;
    string bucket = 13;
    string endpoint = 14;
    enum Order {
        DESC = 0;
        ASC = 1;
    }
    Order order = 15;
    string role = 16;
}

message ProviderEventsFilter {
    int64 start_timestamp = 1;
    int64 end_timestamp = 2;
    repeated string actions = 3;
    string username = 4;
    string ip = 5;
    repeated string object_types = 6;
    string object_name = 7;
    repeated string instance_ids = 8;
    int32 limit = 9;
    string from_id = 10;
    enum Order {
        DESC = 0;
        ASC = 1;
    }
    Order order = 11;
    string role = 12;
    bool omit_object_data = 13;
}

message LogEventsFilter {
    int64 start_timestamp = 1;
    int64 end_timestamp = 2;
    repeated int32 events = 3;
    string username = 4;
    string ip = 5;
    repeated string protocols = 6;
    repeated string instance_ids = 7;
    int32 limit = 8;
    string from_id = 9;
    enum Order {
        DESC = 0;
        ASC = 1;
    }
    Order order = 10;
    string role = 11;
}

message SearchResponse {
    bytes data = 1; // JSON serialized response to return
}

service Searcher {
    rpc SearchFsEvents(FsEventsFilter) returns (SearchResponse);
    rpc SearchProviderEvents(ProviderEventsFilter) returns (SearchResponse);
    rpc SearchLogEvents(LogEventsFilter) returns (SearchResponse);
}